@@ -1,3 +1,9 @@
+2002-03-30 Aruna P R <aruna.pou@wipro.com>
+
+        Replaced GtkClist and GtkCtree calls with GtkTreeView calls in the files        * actions.c
+        * monitor.c
+        * logview.h
+
 2002-03-20  Yogeesh MB <yogeeshappa.mathighatta@wipro.com>
 
 	* logview.c :Removed user preference dialog, Patch #57968
